<resources>
    <string name="app_name">Easemob Chat Room</string>
    <string name="app_easemob_chatroom">Easemob Chat Room</string>
    <string name="app_easemob_chatroom_copy_right">Powered by Easemob</string>

    <string name="chatroom_create">Create Room</string>
    <string name="chatroom_login">Login</string>
    <string name="chatroom_login_title">Login Easemob Chat Room</string>
    <string name="chatroom_login_phone_number">Mobile Number</string>
    <string name="chatroom_login_code">Verification Code</string>
    <string name="chatroom_login_get_code">Get Code</string>
    <string name="chatroom_login_agreement">By joining, you agree to our Terms of Service and Privacy Policy</string>
    <string name="chatroom_create_input_name">Room name does not support inputting emoji temporarily</string>

    <string name="chatroom_phone_number">mobile number cannot be empty</string>
    <string name="chatroom_correct_number">Please enter correct mobile number</string>
    <string name="chatroom_correct_code">Please enter verification code</string>
    <string name="chatroom_code_error">Incorrect Code</string>
    <string name="chatroom_login_ready">Please confrim Terms &amp; Policy</string>

    <string name="chatroom_tab_layout_all">All</string>
    <string name="chatroom_tab_layout_chat_room">Chat Room</string>
    <string name="chatroom_tab_layout_audio_room">Spatial Audio Room</string>
    <string name="chatroom_tab_layout_karaoke_room">Karaoke</string>

    <string name="room_disclaimer">Disclaimer for demo</string>
    <string name="room_sound_selection">Sound Selection</string>
    <string name="chatroom_current_customer_usage">Current Customer Usage</string>

    <string name="chatroom_create_empty_name">No Room Name</string>
    <string name="chatroom_create_room_name">Room Name</string>
    <string name="chatroom_create_hint_room_name">Set Room Name</string>
    <string name="chatroom_create_random_name">Random</string>
    <string name="chatroom_create_encrypt">Room Access?</string>
    <string name="chatroom_create_private">Private</string>
    <string name="chatroom_create_public">Public</string>
    <string name="chatroom_create_next">Next</string>
    <string name="chatroom_create_go_live">Go Live</string>
    <string name="chatroom_create_chat_room_tag">Chat Room</string>
    <string name="chatroom_create_chat_3d_room">Spatial Audio</string>
    <string name="chatroom_create_chat_room_desc">Multi-audio chat scenario where anyone can unmute their mic and speak \nCo-Watch / Team Chat / Gaming Buddy Chat</string>
    <string name="chatroom_create_3d_room">Spatial Audio</string>
    <string name="chatroom_create_3d_room_desc">Power natural conversations that make people feel like "they're in the room" together</string>
    <string name="chatroom_create_ktv_room">KTV</string>
    <string name="chatroom_room_create_tips">Enter 4 Digit PassWord</string>
    <string name="chatroom_check_password">Incorrect Password</string>

    <string name="chatroom_empty_data">No Chat Room Yet</string>
    <string name="chatroom_list_title_private">Private</string>
    <string name="chatroom_list_item_enter">Enter</string>
    <string name="chatroom_list_count">%1$s</string>
    <string name="chatroom_tab_layout_count">(%1$s)</string>
    <string name="chatroom_profile_update_name_fail">Change Failed</string>
    <string name="chatroom_profile_update_name_suc">Change Success</string>

    <string name="chatroom_empty_invite_hands">No audience yet</string>
    <string name="chatroom_empty_raised_hands">No one raised hands yet</string>
    <string name="chatroom_profile">Profile</string>
    <string name="chatroom_close">Room Closed</string>
    <string name="chatroom_kick_member">Kicked Out</string>

    <string name="chatroom_welcome">Welcome to the voice chat room! Pornography, gambling or violence is strictly prohibited in the room.</string>

    <!-- gift -->
    <string name="gift_default_name_1">Sweet Heart</string>
    <string name="gift_default_name_2">Flower</string>
    <string name="gift_default_name_3">Crystal Box</string>
    <string name="gift_default_name_4">Super Agora</string>
    <string name="gift_default_name_5">Star</string>
    <string name="gift_default_name_6">Lollipop</string>
    <string name="gift_default_name_7">Diamond</string>
    <string name="gift_default_name_8">Crown</string>
    <string name="gift_default_name_9">Rocket</string>

    <string name="chatroom_send_gift_fail">Gift Sent Failed</string>
    <string name="chatroom_create_tip1">This product is for testing only, not for commerce.</string>
    <string name="chatroom_create_tip2">Every room will be maintained for 10 minutes.</string>
    <string name="chatroom_profile_change_picture">Change Profile Picture</string>

    <string name="chatroom_agree_success">Agree success!</string>
    <string name="chatroom_agree_fail">Agree failed!</string>
    <string name="chatroom_send_invited_fail">Invited failed!</string>
    <string name="chatroom_raised_hands_title">Raised Hands</string>
    <string name="chatroom_invite_hands_title">Invite On-Stage</string>
    <string name="chatroom_invite">Invite</string>
    <string name="chatroom_invited">Invited</string>
    <string name="chatroom_accept">Accept</string>
    <string name="chatroom_decline">Decline</string>
    <string name="chatroom_accepted">Accepted</string>
    <string name="chatroom_request_speak">Request to Speak?</string>
    <string name="chatroom_cancel_request_speak">Cancel Request to Speak?</string>
    <string name="chatroom_prompt">Prompt</string>
    <string name="chatroom_confirm">Confirm</string>
    <string name="chatroom_cancel">Cancel</string>
    <string name="chatroom_mic_apply_success">Apply success!</string>
    <string name="chatroom_mic_apply_fail">Apply failed!</string>
    <string name="chatroom_mic_cancel_apply_success">Cancel apply success!</string>
    <string name="chatroom_mic_cancel_apply_fail">Cancel apply failed!</string>

    <!-- mic -->
    <string name="chatroom_mic_submit_sent">Your request has been sent,%n please wait for reply</string>
    <string name="chatroom_open_bot_to_sound_effect">Add bot to listen to sound effect?</string>
    <string name="chatroom_end_live">End Live?</string>
    <string name="chatroom_end_live_tips">The room will close after you leave.</string>
    <string name="chatroom_exit">Exit the chatroom?</string>
    <string name="chatroom_exit_and_create_one">Exit the chatroom and recreate a new one?</string>
    <string name="chatroom_open_bot_prompt">Add bot?</string>
    <string name="chatroom_exchange_mic">Exchange seat?</string>
    <string name="chatroom_exchange_mic_success">Exchange seat success</string>
    <string name="chatroom_exchange_mic_fail">Exchange seat error:%1$s</string>
    <string name="chatroom_mic_close_by_host">Mic closed by host</string>
    <string name="chatroom_mic_muted_by_host">The current seat has been banned by the host</string>
    <string name="chatroom_mic_kicked_off">Kicked Off</string>
    <string name="chatroom_mic_unblocked">Mic Unblocked</string>
    <string name="chatroom_mic_blocked">Mic Blocked</string>
    <string name="chatroom_mic_muted">Mic Muted</string>
    <string name="chatroom_mic_unmuted">Mic Unmuted</string>
    <string name="chatroom_mic_audience_accepted_invitation">%1$s Accepted Invitation</string>
    <string name="chatroom_mic_audience_rejected_invitation">%1$s Rejected Invitation</string>
    <string name="chatroom_mic_stafe_is_full">The stage is full,try again later</string>
    <string name="chatroom_mic_request_cancelled">Request Cancelled</string>
    <string name="chatroom_mic_on_stage">On-Stage</string>
    <string name="chatroom_mic_off_stage">Off-Stage</string>
    <string name="chatroom_mic_removed_from_stage">You were removed from stage</string>
    <string name="chatroom_mic_kicked_out_of_the_room">You have been kicked out of the room</string>
    <string name="chatroom_mic_anchor_invited_you_on_stage">Anchor Invited You On-Stage</string>
    <string name="chatroom_mic_exchange_mic_success">Exchange mic success</string>
    <string name="chatroom_mic_exchange_mic_failed">Exchange mic failed</string>
    <string name="chatroom_first_enter_room_notice_tips">Welcome!</string>
    <string name="chatroom_notice_edit_hint">Announce to chatroom, 140 character limit.</string>
    <string name="chatroom_edit">Edit</string>
    <string name="chatroom_notice_edit_limit">140 character limit.</string>
    <string name="chatroom_notice_post">Post</string>
    <string name="chatroom_notice_posted">Notice Posted</string>
    <string name="chatroom_notice_posted_error">Post Failed</string>
    <string name="chatroom_join_room_success">Joined Success</string>
    <string name="chatroom_join_room_failed">Joined Failed</string>
    <string name="chatroom_host_invitation_sent">Invitation sent!</string>

    <string name="chatroom_disclaimer_content_1">[Easemob Chat Room Demo] (this "Product") is a test product provided by Easemob. This Product is available for our current and potential customers only, and for them to test the functionality and quality of this Product. This Product is provided neither for commercial nor for public use.
Easemob enjoys the copyright and ownership of this product. You shall not modify, consolidate, compile, adjust, reverse engineer, sub-license, transfer, sell this Product or infringe the legitimate interests of Easemob in any way.</string>
    <string name="chatroom_disclaimer_content_2">If you’d like to test this Product, you’re welcome to download, install and use it. Easemob hereby grants you a world-wide and royalty-free license to use this Product. This product is provided "as is" without any express or implicit warranty, including but not limited to guarantees of suitability, suitability for specific purposes, and non-infringement. Whether it is due to any contract, infringement or other forms of conduct related to this Product or the use of this Product or otherwise, Easemob shall not be liable for any claims, damages or liabilities arising out of or related to your use of this Product.</string>
    <string name="chatroom_disclaimer_content_3">It’s your freedom to choose to test this Product or not. But if you decide to do so, and if you download, install, or use this Product, it means that you confirm and agree that under no circumstances shall Easemob be liable for any form of loss or injury caused to yourself or others when you use this Product for any reason, in any manner.</string>
    <string name="chatroom_disclaimer_email">If you have any query, please feel free to contact
        support@easemob.com</string>
</resources>