<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_app_def_white"
    android:id="@+id/clRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.easemob.secnceui.widget.titlebar.ChatroomTitleBar
        android:id="@+id/title_bar"
        app:layout_constraintTop_toTopOf="parent"
        app:titleBarTitle="@string/room_disclaimer"
        app:titleBarTitleTextColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:titleBarDisplayHomeAsUpEnabled="true"
        />

    <ScrollView
        app:layout_constraintTop_toBottomOf="@+id/title_bar"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:background="@color/white"
            android:paddingBottom="38dp"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/content"
                android:textSize="@dimen/sp_16"
                android:layout_marginTop="20dp"
                android:textColor="@color/dark_grey_color_040925"
                android:text="@string/chatroom_disclaimer_content_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <com.google.android.material.textview.MaterialTextView
                android:textSize="@dimen/sp_16"
                android:layout_marginTop="50dp"
                android:textColor="@color/dark_grey_color_040925"
                android:text="@string/chatroom_disclaimer_content_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <com.google.android.material.textview.MaterialTextView
                android:textSize="@dimen/sp_16"
                android:layout_marginTop="50dp"
                android:textColor="@color/dark_grey_color_040925"
                android:text="@string/chatroom_disclaimer_content_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/end"
                android:textSize="@dimen/sp_16"
                android:enabled="true"
                android:clickable="true"
                android:layout_marginTop="38dp"
                android:textColor="@color/dark_grey_color_040925"
                android:text="@string/chatroom_disclaimer_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="true" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>