<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_app_def_white"
    android:id="@+id/clRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/mtChatroom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chatroom_login_title"
        android:textColor="@color/main_color_009FFF"
        android:layout_marginStart="30dp"
        android:textSize="@dimen/sp_24"
        android:textStyle="bold"
        android:letterSpacing="0.05"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.26" />


    <EditText
        android:id="@+id/et_login_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.34"
        android:hint="@string/chatroom_login_phone_number"
        style="@style/em_login_et_input" />

    <ImageView
        app:layout_constraintTop_toTopOf="@+id/et_login_name"
        app:layout_constraintBottom_toBottomOf="@+id/et_login_name"
        app:layout_constraintRight_toRightOf="@id/et_login_name"
        android:layout_marginEnd="20dp"
        android:visibility="gone"
        android:src="@drawable/icon_login_circle"
        android:id="@+id/login_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/et_login_pwd"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_login_name"
        android:hint="@string/chatroom_login_code"
        android:layout_marginTop="20dp"
        android:inputType="number"
        android:ellipsize="end"
        android:singleLine="true"
        android:maxLength="6"
        style="@style/em_login_et_input"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/get_code"
        app:layout_constraintTop_toTopOf="@+id/et_login_pwd"
        app:layout_constraintBottom_toBottomOf="@+id/et_login_pwd"
        app:layout_constraintRight_toRightOf="@id/et_login_pwd"
        android:padding="20dp"
        android:text="@string/chatroom_login_get_code"
        android:textColor="@color/color_009FFF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/bt_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/chatroom_login"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:gravity="center"
        android:elevation="14dp"
        android:background="@drawable/bg_rect_radius24_gradient_blue"
        app:layout_constraintTop_toBottomOf="@+id/et_login_pwd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintTop_toBottomOf="@+id/bt_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.easemob.chatroom.widget.MyCheckBoxView
            android:id="@+id/cb_select"
            android:layout_width="20dp"
            android:layout_height="20dp"
            app:attr_drawableWidth="16dp"
            app:attr_drawableHeight="16dp"
            android:padding="3dp"
            android:layout_marginTop="4dp"
            android:layout_marginStart="6dp"
            android:button="@drawable/room_create_encrypt_bg"
            />

        <TextView
            android:id="@+id/tv_agreement"
            android:layout_width="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_height="50dp"
            android:textColor="@color/color_3c4267"
            android:letterSpacing="0.1"
            android:lineSpacingExtra="5dp"
            android:text="@string/chatroom_login_agreement"
            android:textSize="12sp"/>

    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.constraintlayout.widget.ConstraintLayout>