<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_rect_top_radius20_white">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:src="@drawable/icon_chatroom_rectangle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/mtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/chatroom_notice"
        android:textColor="@color/dark_grey_color_040925"
        android:textSize="@dimen/sp_16"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivTitle"
        tools:text="Notice" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mbConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:paddingHorizontal="18dp"
        android:paddingVertical="8dp"
        android:text="@string/chatroom_confirm"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_14"
        android:textStyle="bold"
        android:visibility="gone"
        app:backgroundTint="@color/main_color_156EF3"
        app:cornerRadius="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/mtTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/mtTitle" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/mtCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:padding="10dp"
        android:text="@string/chatroom_cancel"
        android:textColor="@color/dark_grey_color_6C7192"
        android:textSize="@dimen/sp_14"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/mtTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/mtTitle"
        tools:text="Cancel" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/mtContent"
        android:layout_width="0dp"
        android:layout_height="180dp"
        android:layout_marginStart="20dp"
        android:paddingTop="14dp"
        android:layout_marginEnd="20dp"
        android:lineSpacingExtra="6dp"
        android:textColor="@color/color_3C4267"
        android:textSize="@dimen/sp_14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mtTitle"
        tools:text="@string/chatroom_first_enter_room_notice_tips" />

    <EditText
        android:id="@+id/etInput"
        android:layout_width="0dp"
        android:layout_height="180dp"
        android:layout_marginStart="18dp"
        android:paddingTop="14dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="100dp"
        android:background="@color/transparent"
        android:gravity="top"
        android:hint="@string/chatroom_notice_edit_hint"
        android:lineSpacingExtra="6dp"
        android:maxEms="140"
        android:maxLength="140"
        android:textColor="@color/color_3C4267"
        android:textColorHint="@color/dark_grey_color_979CBB"
        android:textSize="@dimen/sp_14"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mtTitle" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mbEdit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="18dp"
        android:paddingVertical="12dp"
        android:text="@string/chatroom_edit"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_14"
        android:textStyle="bold"
        android:visibility="visible"
        app:backgroundTint="@color/main_color_156EF3"
        app:cornerRadius="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
